<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:elevation="10dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingVertical="20dp">

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/sure"
        android:textColor="@color/black" />

    <TextView
        style="@style/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/leave_page"
        android:textAlignment="textStart"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/leave_button"
        style="@style/button_outline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/leave_page_aknowldge" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cacel"
        style="@style/button_outline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/cancel" />

</LinearLayout>